# tokman

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Containerfile  Containerfile.tests  Makefile  README.md  alembic.ini  config.py  config.py.example  run.sh  setup.cfg
.github/workflows/: build-and-push.yml
alembic/: env.py
alembic/versions/: 00097801cd59_create_tokens_table.py
tests/: conftest.py  spellbook.py  test_api.py  test_models.py
tests/data/: private-key  testing_config.py
tokman/: __init__.py  app.py
