# Copyright Contributors to the Packit project.
# SPDX-License-Identifier: MIT

[metadata]
name = tokman
description = A token manager for GitHub Applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/packit/tokman
author = Red Hat
author_email = user-cont-team@redhat.com
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
keywords =
    GitHub
    tokens
    packit

[options]
packages = find:
install_requires =
    flask
    flask-sqlalchemy
    flask-restx
    pygithub
    cryptography
python_requires = >=3.9
include_package_data = True
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

[options.extras_require]
testing =
    pytest

[options.packages.find]
exclude =
    tests*
